--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
     "gulp-eslint": "^1.1.0",
+    "gulp-iife": "^0.2.4",
     "gulp-sourcemaps": "^1.6.0",
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
