Sorted out test compilation, started porting code

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
-    "presets": ['es2015'],
-    "plugins": ['transform-runtime'],
+    "presets": ["es2015"],
+    "plugins": ["transform-runtime"],
     "ignore": [
-        'node_modules/**/*'
+        "node_modules/**/*"
     ]
 }
