--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "url": "https://github.com/foglerek/edd.js/issues"
   },
   "homepage": "https://github.com/foglerek/edm.js",
+  "browserify-shim": {
+    "lodash": "global:_"
+  },
   "devDependencies": {
     "babel": "^6.1.18",
     "babel-cli": "^6.2.0",
@@ -35,6 +38,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "browserify-shim": "^3.8.12",
     "del": "^2.1.0",
     "eslint": "^1.9.0",
     "gulp": "^3.9.0",
@@ -46,6 +50,7 @@
     "jasmine-core": "^2.3.4",
     "json5": "^0.4.0",
     "karma": "^0.13.15",
+    "karma-browserify": "^4.4.2",
     "karma-chrome-launcher": "^0.2.1",
     "karma-coverage": "^0.5.3",
     "karma-firefox-launcher": "^0.1.7",
